# waterjet

./: .gitignore  Cargo.toml  README.md
examples/printhello/: Cargo.toml  build.rs
examples/printhello/src/: lib.rs
src/: build.rs  javagen.rs  lib.rs
waterjet-glue/: Cargo.toml
waterjet-glue/src/: lib.rs
waterjet-glue/src/plugin/: pluginmain.java
waterjet_macros/: Cargo.toml
waterjet_macros/src/: lib.rs
