[package]
name = "waterjet"
version = "0.0.1"
authors = ["DasEtwas <18222134+DasEtwas@users.noreply.github.com>"]
edition = "2018"
exclude = ["examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
case = "1.0.0"
joinery = "2.0.0"
jni = "0.14.0"
waterjet_macros = { path = "waterjet_macros" }
toml = "0.5.5"

[workspace]
members = ["waterjet_macros", "examples/printhello"]