[package]
name = "waterjet_macros"
version = "0.0.1"
authors = ["DasEtwas <18222134+DasEtwas@users.noreply.github.com>"]
edition = "2018"
crate-type = "proc-macro"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joinery = "2.0.0"