[package]
name = "printhello"
version = "0.1.0"
authors = ["waterjet"]
edition = "2018"
build = "build.rs"
crate-type = "cdylib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waterjet = { path = "../../" }
jni = "0.14.0"

[build-dependencies]
waterjet = { path = "../../" }

[package.metadata.waterjet]
name = "PrintHello"